--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,5 +1,11 @@
-<h1>Wikis</h1>
+<h1>List of Wikis</h1>
 
 <% @wikis.each do |wiki| %>
-  <p><%= link_to wiki.title, wiki_path(wiki.id) %></p>
-  <% end %> 
+<div class= "media">
+  <div class= "media-body">
+    <h4 class= "media-heading">
+      <%= link_to wiki.title, wiki_path(wiki.id) %>
+    </h4>
+  </div>
+ </div>
+<% end %> 
