--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Wikis#show</h1>
-<p>Find me in app/views/wikis/show.html.erb</p>
+<h1>Wikis</h1>
+<h2><%= @wiki.title %></h2>
+<p><%= @wiki.body %></p>
