--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Wikis#edit</h1>
-<p>Find me in app/views/wikis/edit.html.erb</p>
+<div class="container">
+ <div class="row">
+  <div class="col-md-4">
+    <h1>Edit Wiki</h1>
+    <p>Guidelines for Wikis</p>
+    <ul>
+      <li>This doesn't have to be perfect</li>
+      <li>Just write what you need to say</li>
+    </ul>
+  </div>
+  <div class="col-md-8">
+    <%= form_for @wiki do |f| %>
+    <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control', placeholder: 'Enter title' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :body %>
+      <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: 'Enter body' %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Save", class: 'btn btn-success' %>
+    </div>
+      <% end %>
+    </div>
+  </div>
+
+
