--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -6,5 +6,8 @@
   </div>
   <div class="col-md-8">
     <%= link_to 'Edit', edit_wiki_path(@wiki), class: 'btn btn-success' %>
+    <%= link_to "Delete", [@wiki], method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure you want to delete this wiki?" } %> 
   </div>
 </div>
+
+
