--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,9 +5,10 @@
       <p><%= @wiki.body %></p>
   </div>
   <div class="col-md-8">
+    <% if policy(@wiki).edit? %>    
     <%= link_to 'Edit', edit_wiki_path(@wiki), class: 'btn btn-success' %>
-    <%= link_to "Delete", [@wiki], method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure you want to delete this wiki?" } %> 
+    <% end %>
+    <%= link_to 'Delete', @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
   </div>
 </div>
-
 
