Changed layout of stripe views

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,8 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<div class='row'>
+  <div class='col-md-4'>
+
+<h2>Thanks, your payment of <strong>$5.00</strong> has been processed.</h2>
+<p>As a Blocipedia <strong>premium member</strong>, you can:</p>
+ <ul>Create private wikis</ul>
+ <ul>Add or remove collaborators to your private wikis</ul>
+ 
