--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <li><%= link_to "Blocipedia", root_path %></li>
       <li><%= link_to "About", about_path %></li>   
       <li><%= link_to "Wikis", wikis_path %></li> 
+      <li><%= link_to "Upgrade", new_charge_path %></li> 
 
      <div class="pull-right user-info">
        <% if current_user %>
