--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,11 @@
 <body>
    <div class= "container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "Blocipedia", root_path %></li>
+      <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>   
-      <li><%= link_to "Wikis", wikis_path %></li> 
+      <li><%= link_to "All Wikis", wikis_path %></li> 
+      <li><%= link_to "My Wikis", wikis_path(select: "mywikis") %></li>
+      <li><%= link_to "New Wiki", new_wiki_path %></li> 
       <li><%= link_to "Upgrade", new_charge_path %></li> 
 
      <div class="pull-right user-info">
