--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,8 +1,4 @@
 <div class='row'>
   <div class='col-md-4'>
-
-<h2>Thanks, your payment of <strong>$5.00</strong> has been processed.</h2>
-<p>As a Blocipedia <strong>premium member</strong>, you can:</p>
- <ul>Create private wikis</ul>
- <ul>Add or remove collaborators to your private wikis</ul>
- 
+   <h2>Thanks, your payment of <strong>$5.00</strong> has been processed.</h2>
+    <p><%= link_to "Back to Home Page", root_path, class:'btn btn-primary'%></p>
