--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Blocipedia</title>
+
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -10,15 +11,18 @@
    <div class= "container">
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", about_path %></li>   
+      <li><%= link_to "About", about_path %></li>
+
+      <% if current_user %>   
       <li><%= link_to "All Wikis", wikis_path %></li> 
       <li><%= link_to "My Wikis", wikis_path(select: "mywikis") %></li>
       <li><%= link_to "New Wiki", new_wiki_path %></li> 
       <li><%= link_to "Upgrade", new_charge_path %></li> 
+      <% end %>
 
      <div class="pull-right user-info">
        <% if current_user %>
-         Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+         Hello <%= link_to current_user.name, edit_user_registration_path %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
        <% else %>       
          <%= link_to "Sign In", new_user_session_path %> or 
          <%= link_to "Sign Up", new_user_registration_path %>
@@ -45,6 +49,7 @@
 
 
      <%= yield %>
+  
    </div>
 
 </body>
