--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,27 +1,22 @@
-<div class="row">
-   <div class="col-md-12">
-     <table class="table">
-     <tr>
-       <td><b>Title</b></td>
-       <td><b>Private</b></td>
-       <td><b>Collaborators</b></td>
-     </tr>
+
      <% unless @wikis.empty? %>
-       <% @wikis.each do |wiki| %>
-          <tr><td><%= link_to wiki.title, wiki_path(wiki) %></td>
-              <td><%= "yes" if wiki.private? %></td>
-              <td><%= wiki.users.pluck(:name).join(', ') %></td>
-              </tr> 
-          <% end %>
-        <% else %>
-           <tr>
-           <td></td>
-             <td>
-               <h2>Sorry no Wikis for you</h2>
-             </td>
-             <td></td>
-           </tr>
+     <div class="row">
+      <div class="col-md-12">
+       <table class="table">
+        <tr>
+         <td><b>Title</b></td>
+         <td><b>Private</b></td>
+         <td><b>Collaborators</b></td>
+        </tr>
+        <% @wikis.each do |wiki| %>
+        <tr><td><%= link_to wiki.title, wiki_path(wiki) %></td>
+            <td><%= "yes" if wiki.private? %></td>
+            <td><%= wiki.users.pluck(:name).join(', ') %></td>
+            </tr> 
+            <% end %>
+         <% else %>
+          <h3><strong>You have no wikis at this time.</strong></h3>     
          <% end %>
-     </table>
-    </div>
-   </div>
+       </table>
+      </div>
+     </div>
