--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-4">
     <h1>Wikis</h1>    
-     <h2><%= @wiki.title %></h2>
-      <p><%= @wiki.body %></p>
+     <h2><%= markdown @wiki.title %></h2>
+      <p><%= markdown @wiki.body %></p>
   </div>
   <div class="col-md-8">
     <br>
