changed the name of the app

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,4 @@
-<h2><strong>about blocipedia</strong></h2>
-<p><strong>Blocipedia is a place for creating and sharing information and ideas.</strong></p>
+<h2><strong>about wikimaster</strong></h2>
+<p><strong>wikimaster is a place for creating and sharing information and ideas.</strong></p>
 <p><strong>Here, you add to or edit existing contents, create your own wikis, and and or remove collaborators</strong></p>
 
