--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <br/>
 <div class="jumbotron">
-  <h1>Blocipedia</h1>
-  <p>For sharing and gathering ideas</p>
+  <h1>wikimaster</h1>
+  <p>for sharing and gathering ideas</p>
   <p>
       <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or 
       <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
